Y1/Module_2_Object_Oriented_Programming/intellijml-1.1.7/src/test/syntaxAnnotatorTestData/ModifierBeforeClause.java
package syntaxAnnotatorTestData;

public class ModifierBeforeClause {
    /*@
            helper;
                    pure;
        <error descr="All specification cases must be placed before any modifiers">requires</error> b!=0;
            ensures \result ==a/b;
    */
    public int div(int a, int b) {
        return a / b;
    }
}
